fixing integration errors